# bytecode

./: Cargo.toml
crates/asm/: Cargo.toml
crates/asm-macros/: Cargo.toml
crates/asm-macros/src/: lib.rs
crates/asm/src/: grammar.lalrpop  lib.rs
crates/asm/src/snapshots/: asm__tests__assemble.snap  asm__tests__back_and_front_refs.snap  asm__tests__parse.snap
crates/repl/: Cargo.toml
crates/repl/src/: main.rs
crates/vm/: Cargo.toml
crates/vm/src/: lib.rs
crates/vm/src/snapshots/: vm__tests__fibonacci.snap  vm__tests__fuel_test.snap  vm__tests__func_test.snap  vm__tests__parse.snap
